improved java test syntax with java streaming api call.